# ScanTex

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
configs/: config.yaml
outputs/2026-07-18/19-29-37/.hydra/: config.yaml  hydra.yaml
src/: inference.py  train.py
src/data/: dataset.py  latex_lexer.py  tokenizer.py
src/models/: cnn_backbone.py  decoder.py  encoder.py
ui/: app.py
ui/.streamlit/: config.toml
