[project]
name = "scantex"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "einops>=0.8.2",
    "hydra-core>=1.3.4",
    "matplotlib>=3.11.1",
    "streamlit>=1.59.2",
    "tokenizers>=0.23.1",
    "torch>=2.13.0",
    "torchvision>=0.28.0",
]
